--- a/Klike/Interfaces/PaySettingsFooter.xib
+++ b/Klike/Interfaces/PaySettingsFooter.xib
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KLPaySettingsFooter">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="188"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0mU-NN-G5h">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ok-r2-nOt">
-                            <rect key="frame" x="83" y="72" width="153" height="40"/>
+                            <rect key="frame" x="83" y="8" width="153" height="40"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="153" id="HHJ-dd-yTO"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                             <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
-                            <state key="normal" title="Connect to Stripe" backgroundImage="big_btn">
+                            <state key="normal" title="Connect to Venmo" backgroundImage="big_btn">
                                 <color key="titleColor" red="0.4549019608" green="0.40000000000000002" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -28,43 +30,28 @@
                                 <color key="titleColor" red="0.56862745100000001" green="0.56862745100000001" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5U-TX-Xb8">
-                            <rect key="frame" x="83" y="16" width="153" height="40"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="153" id="kjT-Ts-vcZ"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
-                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
-                            <state key="normal" title="Add Credit Card" backgroundImage="big_btn">
-                                <color key="titleColor" red="0.45490196078431372" green="0.40000000000000002" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <state key="disabled" backgroundImage="big_btn_disabled">
-                                <color key="titleColor" red="0.56862745098039214" green="0.56862745098039214" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                        </button>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="6ok-r2-nOt" firstAttribute="top" secondItem="S5U-TX-Xb8" secondAttribute="bottom" constant="16" id="69U-oL-Ka1"/>
-                        <constraint firstAttribute="height" constant="128" id="8aN-8C-x02"/>
+                        <constraint firstAttribute="height" constant="64" id="8aN-8C-x02"/>
                         <constraint firstAttribute="centerX" secondItem="6ok-r2-nOt" secondAttribute="centerX" id="ZS4-WB-QLr"/>
-                        <constraint firstAttribute="centerX" secondItem="S5U-TX-Xb8" secondAttribute="centerX" id="r8G-hE-HiP"/>
                         <constraint firstAttribute="bottom" secondItem="6ok-r2-nOt" secondAttribute="bottom" constant="16" id="umb-rx-Chq"/>
-                        <constraint firstItem="S5U-TX-Xb8" firstAttribute="top" secondItem="0mU-NN-G5h" secondAttribute="top" constant="16" id="y3Y-7F-3Fz"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="drh-do-Uno">
-                    <rect key="frame" x="0.0" y="132" width="320" height="56"/>
+                    <rect key="frame" x="0.0" y="68" width="320" height="56"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="otA-hL-ojS">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
+                            <animations/>
                             <state key="normal">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_ar_rht" translatesAutoresizingMaskIntoConstraints="NO" id="mT7-JE-HWY">
                             <rect key="frame" x="297" y="22" width="7" height="13"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="12" id="4qb-dG-XMw"/>
                                 <constraint firstAttribute="width" constant="7" id="SZw-NQ-m5m"/>
@@ -83,12 +70,14 @@
                             </variation>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment History" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fum-IK-L48">
-                            <rect key="frame" x="16" y="19" width="103.5" height="16.5"/>
+                            <rect key="frame" x="16" y="19" width="104" height="17"/>
+                            <animations/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="mT7-JE-HWY" secondAttribute="trailing" constant="16" id="9eB-44-akh"/>
@@ -103,6 +92,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <animations/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="0mU-NN-G5h" secondAttribute="trailing" id="ABd-LG-75j"/>
@@ -115,7 +105,6 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="addCardButton" destination="S5U-TX-Xb8" id="Wyy-u3-bJr"/>
                 <outlet property="connectToStripeButton" destination="6ok-r2-nOt" id="oBg-nS-ryp"/>
                 <outlet property="paymentHistoryButton" destination="otA-hL-ojS" id="1AN-Qt-DnJ"/>
             </connections>
